k8s/cp-control-center/cp-control-center-deployment-dev2.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cp-control-center
  labels:
    app: cp-control-center
    tier: compute
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cp-control-center
        tier: compute
    spec:
      containers:
      - image: confluentinc/cp-enterprise-control-center:5.0.0
        imagePullPolicy: Always
        name: cp-control-center
        ports:
        - containerPort: 9021
