k8s/cp-control-center/cp-control-center-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cp-control-center
  labels:
    app: cp-control-center
spec:
  ports:
    - port: 9021
      protocol: TCP
  selector:
    app: cp-control-center
