k8s/cp-control-center/cp-control-center-ingress-dev2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "cp-control-center"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
  name: kafka-ingress
  namespace: dev2
spec:
  tls:
  - hosts:
    - kafka.dev2.kauri.io
    secretName: dev2-kafka-tls
  rules:
    - host: kafka.dev2.kauri.io
      http:
        paths:
          - backend:
              serviceName: cp-control-center
              servicePort: 9021
            path: /
